KarrotMarket/src/main/java/com/example/karrotmarket/global/error/ErrorResponse.java
package com.example.karrotmarket.global.error;

import lombok.*;
import org.springframework.http.HttpStatus;

import java.time.ZonedDateTime;

@Getter
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class ErrorResponse {
    private int status;
    private String message;
    private ZonedDateTime timestamp;
}
